<resources>
    <string name="app_name">UIElementsPt2</string>
    <string name="imgView">TODO</string>
    <string name="albumTitle">TextView</string>
    <string name="add_a_song">Add a Song</string>
    <string name="enter_song_title">Enter Song Title</string>
    <string name="enter_artist">Enter Artist</string>
    <string name="enter_album">Enter Album</string>
    <string name="add_song">ADD SONG</string>
    <string name="edit_song">Edit Song</string>
</resources>